--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,104 @@
+@online{DataProtectionMaterials,
+    title = {{Прокачаться в 2023 — подборка материалов по киберугрозам и защите данных}},
+    author = {{randall}},
+    url = {https://habr.com/ru/companies/cloud_mts/articles/710986/},
+    urldate = {2024-04-26},
+    year={2023}
+}
+
+@online{oracleWhatIsDatabase,
+    title = {{Что такое база данных}},
+    url = {https://www.oracle.com/cis/database/what-is-database/},
+    urldate = {2024-04-29}
+}
+
+@online{CCRFPart4,
+    title = {{Гражданский кодекс Российской Федерации (часть четвертая) от 18.12.2006 N 230-ФЗ (ред. от 30.01.2024)}},
+    url = {https://www.consultant.ru/cons/cgi/online.cgi?req=doc&base=LAW&n=468390&cacheid=D6E5187FB4B223B671BA9DBF3CFB6481&mode=splus&rnd=PzoSNCUeeaeMXDe71#RS1TNCUEfyB4FXPg},
+    urldate = {2024-05-05}
+}
+
+@online{Lihonosov2011,
+    author = {{Лихоносов А. Г.}},
+    title = {{Интернет-курс по дисциплине Безопасность баз данных}},
+    url = {http://www.e-biblio.ru/book/bib/01_informatika/b_baz_dan/sg.html},
+    urldate = {2020-03-01},
+    year={2011}
+}
+
+@online{bdufstec,
+    title = {{Банк данных угроз безопасности информации}},
+    url={https://bdu.fstec.ru/threat},
+    year = 2025,
+    urldate = {2025-04-29}
+}
+
+@online{LAPA,
+    title = {{Основные аспекты безопасности СУБД: что следует знать}},
+    author = {{Лапа}},
+    year = {2016},
+    url = {https://tproger.ru/articles/db-security-basics/},
+    urldate = {2024-05-05}
+}
+
+@book{Pirogov2009,
+    author    = {Пирогов, В.Ю.},
+    title     = {{Информационные системы и базы данных: организация и проектирование}},
+    publisher = {БХВ-Петербург},
+    year      = 2009,
+    isbn      = {978-5-9775-0399-0},
+    url = {https://litmy.ru/knigi/os_bd/107950-informacionnye-sistemy-i-bazy-dannyh-organizaciya-i-proektirovanie.html}
+}
+
+@techreport{fstec17,
+  title       = {Приказ ФСТЭК России от 11.02.2013 N 17 (ред. от 28.08.2024) "Об утверждении Требований о защите информации, не составляющей государственную тайну, содержащейся в государственных информационных системах"},
+  institution = {ФЕДЕРАЛЬНАЯ СЛУЖБА ПО ТЕХНИЧЕСКОМУ И ЭКСПОРТНОМУ КОНТРОЛЮ (ФСТЭК РОССИИ)},
+  url={https://www.consultant.ru/document/cons_doc_LAW_147084/}
+}
+
+@online{FSTEKOBKIS,
+    title = {{Приказ ФСТЭК России от 25 декабря 2017 г. N 239. Требования по обеспечению безопасности значимых объектов критической информационной инфраструктуры Российской Федерации}},
+    url = {https://fstec.ru/dokumenty/vse-dokumenty/prikazy/prikaz-fstek-rossii-ot-25-dekabrya-2017-g-n-239},
+    urldate = {2024-05-12},
+    year = {2017}
+}
+
+@online{MicrosoftLearnSQLserverPerm,
+    title={Microsoft SQL Server. Get started with Database Engine permissions},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16},
+    urldate = {2025-06-04}
+}
+
+@online{oracledbdoc3,
+    title={Oracle Database Security Guide. Part II Managing Security for Oracle Database Users},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19},
+    urldate = {2025-06-04}
+}
+
+@book{ElmasriNavathe,
+    author    = {Ramez Elmasri, Shamkant B. Navathe},
+    title     = {{Fundamentals of Database Systems. 6th edition}},
+    publisher = {Addison-Wesley (Pearson)},
+    year      = 2010,
+    url = {https://asolanki.co.in/wp-content/uploads/2019/02/Fundamentals_of_Database_Systems_6th_Edition-1.pdf}
+}
+
+@book{Silberschatz,
+    author    = {Abraham Silberschatz, Henry F. Korth, S. Sudarshan},
+    title     = {{Database System Concepts. 7th edition}},
+    publisher = {McGrawHill},
+    year      = 2020,
+    url = {https://github.com/Moataz-Elmesmary/Data-Science-Roadmap/blob/main/Books/Abraham%20Silberschatz%2C%20Henry%20Korth%20and%20S.%20Sudarshan%20-%20Database%20System%20Concepts.%207-McGraw-Hill%20Education%20(2020).pdf}
+}
+
+@book{Tanenbaum,
+    author    = {Таненбаум Э., Вудхалл А.},
+    title     = {{Операционные системы: разработка и реализация}},
+    publisher = {СПб.: Питер},
+    year      = 2007,
+    isbn      = {978-5-469-01403-9}
+}
+
 @article{Al2015,
     author = {Ал-Исауи Висам Чяад Карим, Смелов Владимир Владиславович, and Мороз Леонарда Станиславовна},
     journal = {Труды БГТУ. Серия 3: Физико-математические науки и информатика},
@@ -89,14 +190,14 @@
     author  = {{Dodo Engineering}},
     title   = {{Как сервера договариваются друг с другом: алгоритм распределённого консенсуса Raft}},
     url     = {https://habr.com/ru/companies/dododev/articles/469999/},
-    urldate = {2025-06-7}
+    urldate = {2025-06-07}
 }
 
 @online{paxos,
     author  = {{OTUS}},
     title   = {{Кратко про Raft и Paxos: путь к надежным распределенным базам данных}},
     url     = {https://habr.com/ru/companies/otus/articles/793198/},
-    urldate = {2025-06-7}
+    urldate = {2025-06-07}
 }
 
 @online{Consensus,
@@ -303,7 +404,7 @@
 @online{PoS_PoW,
     title = {{Алгоритмы Proof of Work и Proof of Stake}},
     url = {https://fin-plan.org/blog/algoritmy-proof-of-work-pow-i-proof-of-stake-pos},
-    urldate = {2025-04-7}
+    urldate = {2025-04-07}
 }
 
 @online{PostrgreSQL,
@@ -1091,7 +1192,7 @@
 @online{SecureFix,
 	title = {{Вопросы разграничения доступа к данным в СУБД}},
 	url = {https://koapp.narod.ru/tehlit/base/bd/dbms.htm},
-	urldate = {2025-04-7}
+	urldate = {2025-04-07}
 }
 
 @article{PhysLogPeplic,
@@ -2007,6 +2108,298 @@
 	url={https://ieeexplore.ieee.org/document/8114}
 }
 
+@book{OszuValduriez,
+    author    = {M. Tamer Özsu, Patrick Valduriez},
+    title     = {{Principles of Distributed Database Systems, Third Edition}},
+    publisher = {Springer},
+    year      = 2010,
+    url = {https://cs.uwaterloo.ca/~tozsu/ddbook/}
+}
+
+@article{RajeshKumar,
+	author = {Siddharth Choudhary Rajesh, Dr. Ravinder Kumar},
+	journal = {International Journal of Research in all Subjects in Multi Languages},
+	year = {2025},
+	title = {{High Availability Strategies in Distributed Systems: A Practical Guide}},
+	url = {https://www.researchgate.net/publication/388075854_High_Availability_Strategies_in_Distributed_Systems_A_Practical_Guide}
+}
+
+@book{Kleppmann,
+    author    = {Martin Kleppmann},
+    title     = {{Designing Data-Intensive Applications: The Big Ideas Behind Reliable, Scalable, and Maintainable Systems}},
+    publisher = {O'Reilly Media},
+    year      = 2017,
+    url = {https://archive.org/details/designing-data-intensive-applications-th/page/n5/mode/2up}
+}
+
+@book{GarciaMolina,
+    author    = {Hector Garcia-Molina, Jeffrey D. Ullman, Jennifer Widom},
+    title     = {{Database Systems: The Complete Book. 2nd edition}},
+    publisher = {Pearson},
+    year      = 2008,
+    url = {https://people.inf.elte.hu/kiss/DB/ullman_the_complete_book.pdf}
+}
+
+@book{Bernstein,
+    author    = {Bernstein P., Hadzilacos V., Goodman N.},
+    title     = {{Concurrency Control and Recovery in Database Systems}},
+    publisher = {Addison},
+    year      = 1987
+}
+
+@online{SameerParadkar,
+    title={Designing for Uptime: A Framework for High Availability Systems},
+    url={https://medium.com/oolooroo/designing-for-uptime-a-framework-for-high-availability-systems-9d0caeb42397}, 
+    urldate={2025-06-08}
+}
+
+@online{heycoachHAA,
+    title={High Availability Architectures},
+    url={https://blog.heycoach.in/high-availability-architectures/}, 
+    urldate={2025-06-08}
+}
+
+@online{OracleRAC,
+    title={Disaster recovery options in the cloud},
+    url={https://www.oracle.com/database/real-application-clusters/}, 
+    urldate={2025-06-08}
+}
+
+@online{AmazonRds,
+    title={Disaster recovery options in the cloud},
+    url={https://docs.aws.amazon.com/whitepapers/latest/disaster-recovery-workloads-on-aws/disaster-recovery-options-in-the-cloud.html}, 
+    urldate={2025-06-08}
+}
+
+@online{AmazonRds2,
+    title={Amazon RDS Multi-AZ},
+    url={https://aws.amazon.com/rds/features/multi-az/}, 
+    urldate={2025-06-08}
+}
+
+@article{Afonin,
+	author = {Игорь Афонин},
+	year = {2014},
+	title = {{Решение для обеспечения постоянной доступности информационных систем}},
+	url = {https://www.cta.ru/articles/cta/obzory/tekhnologii/124642/}, 
+    urldate={2025-06-08}    
+}
+
+@online{SQLDeveloper,
+    title={SQL Developer. A great tool and better ways to use it},
+    url={https://www.red-gate.com/simple-talk/databases/oracle-databases/sql-developer-a-great-tool-and-better-ways-to-use-it/}, 
+    urldate={2025-06-08}
+}
+
+@book{SnedakerS,
+    author    = {Susan Snedaker},
+    title     = {{Business Continuity and Disaster Recovery}},
+    publisher = {Syngress},
+    year      = 2007,
+    url = {https://archive.org/details/susan-snedaker-business-continuity-and-disaster-recovery-planning-for-it-professionals-syngress-2007}
+}
+
+@article{RajeshBasa,
+	author = {Rajesh Basa},
+    journal = {International Journal for Multidisciplinary Research (IJFMR)},
+	year = {2024},
+	title = {{Cloud Disaster Recovery: Best Practices for Business Continuity in the Cloud}},
+	url = {https://www.ijfmr.com/papers/2024/5/28745.pdf}
+}
+
+@book{WallaceWebber,
+    author    = {Wallace M., Webber L},
+    title     = {{The Disaster Recovery Handbook}},
+    publisher = {AMACOM},
+    year      = 2018,
+    url = {https://www.yourhomeworksolutions.com/wp-content/uploads/edd/2021/05/The_disaster_recovery_handbook__a_step-by-step_plan_-_3rd_edition_4.pdf}
+}
+
+@online{NginxDocs1,
+    title={Configuring Active-Active High Availability},
+    url={https://docs.nginx.com/nginx/admin-guide/high-availability/ha-keepalived-nodes/}, 
+    urldate={2025-06-08}
+}
+
+@online{AvailMashtab,
+    title={Проектирование системы – горизонтальное и вертикальное масштабирование},
+    url={https://andreyex.ru/servera/proektirovanie-sistemy-gorizontalnoe-i-vertikalnoe-masshtabirovanie/?amp=1}, 
+    urldate={2025-06-08}
+}
+
+@online{StatefulSetsApps,
+    title={StatefulSets Applications in Kubernetes},
+    url={https://www.scaler.com/topics/kubernetes/kubernetes-statefulset/}, 
+    urldate={2025-06-08}
+}
+
+@online{AuroraAutoScaling,
+    title={Aurora Auto Scaling in AWS},
+    url={https://www.scaler.com/topics/aws/aurora-auto-scaling/}, 
+    urldate={2025-06-08}
+}
+
+@online{Alshahrani,
+    author = {A. Alshahrani and A. Alghamdi and others},
+    title = {High Availability of Distributed Systems: A Survey},
+    year = {2024},
+    url = {https://arxiv.org/abs/2405.09499},
+    urldate = {2025-06-08}
+}
+
+@online{Dutta,
+    author = {S. Dutta and S. Chalamalasetti and others},
+    title = {Building and Operating Highly Available Distributed Systems},
+    year = {2019},
+    url = {https://link.springer.com/article/10.1007/s00778-019-00581-w},
+    note = {Springer Journal of Data Science and Engineering},
+    urldate = {2025-06-08}
+}
+
+@online{Exadata,
+    title = {Oracle Maximum Availability Architecture on Oracle Exadata Cloud Systems},
+    url = {https://docs.oracle.com/en/database/oracle/oracle-database/23/haovw/oracle-maximum-availability-architecture-oracle-exadata-cloud-systems.html},
+    note = {Официальная документация Oracle},
+    urldate = {2025-06-08}
+}
+
+@online{Nvme,
+    author = {Gabriel Haas and Viktor Leis},
+    title = {Analyzing NVMe SSD Performance for Database Systems},
+    year = {2023},
+    url = {https://vldb.org/pvldb/vol16/p2090-haas.pdf},
+    note = {Proceedings of the VLDB Endowment (PVLDB)},
+    urldate = {2025-06-08}
+}
+
+@online{Nvmeof,
+    title = {NVM Express Over Fabrics Specification},
+    url = {https://nvmexpress.org/wp-content/uploads/NVMe_Over_Fabrics.pdf},
+    urldate = {2025-06-08}
+}
+
+@online{GaleraCl,
+    title = {Galera Cluster},
+    url = {https://galeracluster.com/products/},
+    note = {Официальный сайт Galera Cluster},
+    urldate = {2025-06-08}
+}
+
+@online{Openarc,
+    title = {Orchestrator - MySQL replication topology management and HA tool},
+    url = {https://github.com/openark/orchestrator/blob/master/README.md},
+    urldate = {2025-06-08}
+}
+
+@online{Sosemkaram,
+    author = {Premathas Somasekaram and Radu Calinescu and Rajkumar Buyya},
+    title = {High Availability and Disaster Recovery in Cloud Platforms: A Survey},
+    url = {https://arxiv.org/abs/2109.15139},
+    urldate = {2025-06-08}
+}
+
+@online{Choudhury,
+    author = {Sid Choudhury},
+    title = {How Does the Raft Consensus Based Replication Protocol Work in YugabyteDB?},
+    url = {https://www.yugabyte.com/blog/how-does-the-raft-consensus-based-replication-protocol-work-in-yugabyte-db/},
+    urldate = {2025-06-08}
+}
+
+@online{FBShardManager,
+    title = {Scaling services with Shard Manager},
+    author = {{Facebook Engineering}},
+    year = {2020},
+    url = {https://engineering.fb.com/2020/08/24/production-engineering/scaling-services-with-shard-manager/},
+    urldate = {2025-06-08}
+}
+
+@online{FBRaftMeta,
+    title = {MySQL Raft Meta at Facebook},
+    author = {{Facebook Engineering}},
+    year = {2023},
+    url = {https://engineering.fb.com/2023/05/16/data-infrastructure/mysql-raft-meta/},
+    urldate = {2025-06-08}
+}
+
+@online{TAODistributedGraph,
+    title = {Facebook’s TAO Distributed Social Graph},
+    author = {Ankit Trehan},
+    url = {https://ankittrehan2000.medium.com/facebooks-tao-distributed-social-graph-5857641620da},
+    urldate = {2025-06-08}
+}
+
+@online{NetflixSimianArmy,
+    title = {The Netflix Simian Army},
+    author = {{Netflix Tech Blog}},
+    url = {https://netflixtechblog.com/the-netflix-simian-army-16e57fbab116},
+    urldate = {2025-06-08}
+}
+
+@online{LitmusChaosIntro,
+    title = {What is Litmus?},
+    author = {{LitmusChaos Documentation}},
+    url = {https://docs.litmuschaos.io/docs/introduction/what-is-litmus},
+    urldate = {2025-06-08}
+}
+
+@online{ChaosMeshDocs,
+    title = {Chaos Mesh Documentation},
+    author = {{Chaos Mesh Project}},
+    url = {https://chaos-mesh.org/docs/},
+    urldate = {2025-06-08}
+}
+
+@online{GoogleDremel,
+    title = {Dremel: Interactive Analysis of Web-Scale Datasets},
+    author = {{Google Research}},
+    year = {2010},
+    url = {https://research.google.com/pubs/archive/43438.pdf},
+    urldate = {2025-06-08}
+}
+
+@online{USENIXLi,
+    title = {Towards a Strongly Consistent Distributed Metadata Store},
+    author = {Nanqinqin Li et al.},
+    year = {2022},
+    url = {https://www.usenix.org/system/files/atc22-li-nanqinqin.pdf},
+    urldate = {2025-06-08}
+}
+
+@online{SplitBrainEtcd,
+    title = {Understanding Split Brain Scenarios in Distributed Systems and How etcd Mitigates Them},
+    author = {Sithara Wanigasooriya},
+    url = {https://sithara-wanigasooriya.medium.com/understanding-split-brain-scenarios-in-distributed-systems-and-how-etcd-mitigates-them-e3007acd506d},
+    urldate = {2025-06-08}
+}
+
+@online{GremlinChaosEngineering,
+    title = {Chaos Engineering},
+    author = {{Gremlin Inc.}},
+    url = {https://www.gremlin.com/chaos-engineering},
+    urldate = {2025-06-08}
+}
+
+@online{CAPTheoremGeeks,
+    title = {CAP Theorem in System Design},
+    author = {{GeeksforGeeks}},
+    url = {https://www.geeksforgeeks.org/cap-theorem-in-system-design/},
+    urldate = {2025-06-08}
+}
+
+@online{CAPTheoremIBM,
+    title = {CAP theorem},
+    author = {{IBM Think Blog}},
+    url = {https://www.ibm.com/think/topics/cap-theorem},
+    urldate = {2025-06-08}
+}
+
+@online{Corbett,
+    author = {James C. Corbett and Jeffrey Dean and Michael Epstein and others},
+    title = {Spanner: Google's Globally-Distributed Database},
+    year = {2012},
+    url = {https://research.google.com/archive/spanner-osdi2012.pdf},
+    urldate = {2025-06-08}
+}
 
 @online{KasperskyIoC,
     title = {Indicator of Compromise, IoC},
